[package]
name = "LineDownloader"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
sha1 = "0.10"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
serde_json = "1.0"
num_cpus = "1.14.0"
warp = "0.3"
webbrowser = "0.5"

[profile.release]
lto = true